--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="postdescription_button_post">Post</string>
     <string name="postdescription_button_accept">Accept</string>
     <string name="title_activity_post_info">post_info</string>
+    <string name="title_activity_show_post_location">ShowPostLocation</string>
 </resources>
