--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,9 @@
         <item>O-</item>
         <item>H+</item>
     </string-array>
+    <string-array name="sortBy">
+        <item>Location</item>
+        <item>Time</item>
+        <item>Urgency</item>
+    </string-array>
 </resources>
